--- a/ApplicationCode/res/layout/activity_manage_subscriptions.xml
+++ b/ApplicationCode/res/layout/activity_manage_subscriptions.xml
@@ -13,6 +13,6 @@
     <Button android:id="@+id/findSelected"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/subcribe_string"/>
+        android:text="@string/submit_preference"/>
  
 </LinearLayout>
