--- a/ApplicationCode/res/layout/main.xml
+++ b/ApplicationCode/res/layout/main.xml
@@ -11,24 +11,14 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         />
-    
-    <Button
-	    android:id="@+id/batchRequestButton"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:textStyle="bold"
-	    android:gravity="center"
-	    android:layout_marginTop="30dp"
-	    android:visibility="invisible"
-	    android:text="@string/batchRequest"
-	/>
 
-	<TextView
-	    android:id="@+id/textViewResults"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:textAppearance="?android:attr/textAppearanceLarge" 
-	/>
+    <ProgressBar android:id="@+id/loading_spinner"
+        style="?android:progressBarStyleLarge"
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" 
+        />
     
 
 </LinearLayout>
