--- a/ApplicationCode/res/layout/main.xml
+++ b/ApplicationCode/res/layout/main.xml
@@ -11,6 +11,17 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         />
+    
+    <Button
+       android:id="@+id/batchRequestButton"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:textStyle="bold"
+       android:gravity="center"
+       android:layout_marginTop="30dp"
+       android:visibility="invisible"
+       android:text="@string/batchRequest"
+   />
 
     <ProgressBar android:id="@+id/loading_spinner"
         style="?android:progressBarStyleLarge"
@@ -19,6 +30,4 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" 
         />
-    
-
 </LinearLayout>
