--- a/ApplicationCode/res/layout/activity_home_screen.xml
+++ b/ApplicationCode/res/layout/activity_home_screen.xml
@@ -1,59 +1,47 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".HomeScreen" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/clickSubscribe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:text="@string/ClickToSubscribe" />
-
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        
     <ImageButton
         android:id="@+id/CMUFeedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/clickSubscribe"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="62dp"
         android:src="@drawable/ic_launcher_cmu" />
 
     <ImageButton
         android:id="@+id/FBFeedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/CMUFeedButton"
-        android:layout_marginRight="48dp"
         android:src="@drawable/ic_launcher_fb" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    
     <ImageButton
         android:id="@+id/TwitterFeedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/CMUFeedButton"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="62dp"
         android:src="@drawable/ic_launcher_twitter" />
 
     <ImageButton
         android:id="@+id/AlertFeedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/TwitterFeedButton"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/TwitterFeedButton"
-        android:layout_marginRight="48dp"
-        android:src="@drawable/ic_launcher_alerts" />
+        android:src="@drawable/ic_launcher_alerts" /> 
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
